// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin adds __typename selections for abstract types 1`] = `
"(AbstractTypeDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"id\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"AbstractType\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": null,
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"node\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/)
        ],
        \\"storageKey\\": \\"node(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"AbstractType\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": null,
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"node\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"alias\\": null,
            \\"args\\": null,
            \\"kind\\": \\"ScalarField\\",
            \\"name\\": \\"__typename\\",
            \\"storageKey\\": null
          },
          (v1/*: any*/)
        ],
        \\"storageKey\\": \\"node(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"900dace19fa0c3e805661ca70a95dd76\\",
    \\"metadata\\": {},
    \\"name\\": \\"AbstractType\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(AbstractTypeDocument as any).__relay.hash = \\"900dace19fa0c3e805661ca70a95dd76\\";"
`;

exports[`plugin emits connection metadata 1`] = `
"(ConnectionQueryDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"kind\\": \\"Literal\\",
  \\"name\\": \\"sort\\",
  \\"value\\": \\"DESC\\"
},
v2 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"id\\",
  \\"storageKey\\": null
},
v3 = [
  {
    \\"alias\\": null,
    \\"args\\": null,
    \\"concreteType\\": \\"MessagesConnectionEdge\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"edges\\",
    \\"plural\\": true,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"concreteType\\": \\"Message\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"node\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v2/*: any*/),
          {
            \\"alias\\": null,
            \\"args\\": null,
            \\"kind\\": \\"ScalarField\\",
            \\"name\\": \\"__typename\\",
            \\"storageKey\\": null
          }
        ],
        \\"storageKey\\": null
      },
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"cursor\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": null
  },
  {
    \\"alias\\": null,
    \\"args\\": null,
    \\"concreteType\\": \\"PageInfo\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"pageInfo\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"endCursor\\",
        \\"storageKey\\": null
      },
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"hasNextPage\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": null
  }
],
v4 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"deferPresence\\",
    \\"value\\": true
  },
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"first\\",
    \\"value\\": 10
  },
  (v1/*: any*/)
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"ConnectionQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"kind\\": \\"InlineFragment\\",
            \\"selections\\": [
              {
                \\"alias\\": \\"messages\\",
                \\"args\\": [
                  (v1/*: any*/)
                ],
                \\"concreteType\\": \\"MessagesConnection\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"__Connection_messages_connection\\",
                \\"plural\\": false,
                \\"selections\\": (v3/*: any*/),
                \\"storageKey\\": \\"__Connection_messages_connection(sort:\\\\\\"DESC\\\\\\")\\"
              }
            ],
            \\"type\\": \\"Conversation\\",
            \\"abstractKey\\": null
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"ConnectionQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"alias\\": null,
            \\"args\\": (v4/*: any*/),
            \\"concreteType\\": \\"MessagesConnection\\",
            \\"kind\\": \\"LinkedField\\",
            \\"name\\": \\"messages\\",
            \\"plural\\": false,
            \\"selections\\": (v3/*: any*/),
            \\"storageKey\\": \\"messages(deferPresence:true,first:10,sort:\\\\\\"DESC\\\\\\")\\"
          },
          {
            \\"alias\\": null,
            \\"args\\": (v4/*: any*/),
            \\"filters\\": [
              \\"sort\\"
            ],
            \\"handle\\": \\"connection\\",
            \\"key\\": \\"Connection_messages\\",
            \\"kind\\": \\"LinkedHandle\\",
            \\"name\\": \\"messages\\"
          },
          (v2/*: any*/)
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"2db2e3051e8c35e5449d290d3f4af8da\\",
    \\"metadata\\": {},
    \\"name\\": \\"ConnectionQuery\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(ConnectionQueryDocument as any).__relay.hash = \\"2db2e3051e8c35e5449d290d3f4af8da\\";
(Messages_conversationFragmentDoc as any).__relay = {
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": {
    \\"connection\\": [
      {
        \\"count\\": null,
        \\"cursor\\": null,
        \\"direction\\": \\"forward\\",
        \\"path\\": [
          \\"messages\\"
        ]
      }
    ]
  },
  \\"name\\": \\"Messages_conversation\\",
  \\"selections\\": [
    {
      \\"alias\\": \\"messages\\",
      \\"args\\": [
        {
          \\"kind\\": \\"Literal\\",
          \\"name\\": \\"sort\\",
          \\"value\\": \\"DESC\\"
        }
      ],
      \\"concreteType\\": \\"MessagesConnection\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"__Connection_messages_connection\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"MessagesConnectionEdge\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"edges\\",
          \\"plural\\": true,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"concreteType\\": \\"Message\\",
              \\"kind\\": \\"LinkedField\\",
              \\"name\\": \\"node\\",
              \\"plural\\": false,
              \\"selections\\": [
                {
                  \\"alias\\": null,
                  \\"args\\": null,
                  \\"kind\\": \\"ScalarField\\",
                  \\"name\\": \\"id\\",
                  \\"storageKey\\": null
                },
                {
                  \\"alias\\": null,
                  \\"args\\": null,
                  \\"kind\\": \\"ScalarField\\",
                  \\"name\\": \\"__typename\\",
                  \\"storageKey\\": null
                }
              ],
              \\"storageKey\\": null
            },
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"cursor\\",
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        },
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"PageInfo\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"pageInfo\\",
          \\"plural\\": false,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"endCursor\\",
              \\"storageKey\\": null
            },
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"hasNextPage\\",
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": \\"__Connection_messages_connection(sort:\\\\\\"DESC\\\\\\")\\"
    }
  ],
  \\"type\\": \\"Conversation\\",
  \\"abstractKey\\": null
};
(Messages_conversationFragmentDoc as any).__relay.hash = \\"6a0174c53079bd79d3c131049bc2ca8a\\";"
`;

exports[`plugin generates a ConcreteRequest for an operation 1`] = `
"(SomeQueryDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"id\\",
  \\"storageKey\\": null
},
v2 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"first\\",
    \\"value\\": 10
  }
],
v3 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"text\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"SomeQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          {
            \\"kind\\": \\"InlineFragment\\",
            \\"selections\\": [
              (v1/*: any*/),
              {
                \\"alias\\": null,
                \\"args\\": (v2/*: any*/),
                \\"concreteType\\": \\"MessagesConnection\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"messages\\",
                \\"plural\\": false,
                \\"selections\\": [
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"concreteType\\": \\"MessagesConnectionEdge\\",
                    \\"kind\\": \\"LinkedField\\",
                    \\"name\\": \\"edges\\",
                    \\"plural\\": true,
                    \\"selections\\": [
                      {
                        \\"alias\\": null,
                        \\"args\\": null,
                        \\"concreteType\\": \\"Message\\",
                        \\"kind\\": \\"LinkedField\\",
                        \\"name\\": \\"node\\",
                        \\"plural\\": false,
                        \\"selections\\": [
                          {
                            \\"kind\\": \\"InlineFragment\\",
                            \\"selections\\": [
                              (v3/*: any*/)
                            ],
                            \\"type\\": \\"Message\\",
                            \\"abstractKey\\": null
                          }
                        ],
                        \\"storageKey\\": null
                      }
                    ],
                    \\"storageKey\\": null
                  }
                ],
                \\"storageKey\\": \\"messages(first:10)\\"
              }
            ],
            \\"type\\": \\"Conversation\\",
            \\"abstractKey\\": null
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"SomeQuery\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/),
          {
            \\"alias\\": null,
            \\"args\\": (v2/*: any*/),
            \\"concreteType\\": \\"MessagesConnection\\",
            \\"kind\\": \\"LinkedField\\",
            \\"name\\": \\"messages\\",
            \\"plural\\": false,
            \\"selections\\": [
              {
                \\"alias\\": null,
                \\"args\\": null,
                \\"concreteType\\": \\"MessagesConnectionEdge\\",
                \\"kind\\": \\"LinkedField\\",
                \\"name\\": \\"edges\\",
                \\"plural\\": true,
                \\"selections\\": [
                  {
                    \\"alias\\": null,
                    \\"args\\": null,
                    \\"concreteType\\": \\"Message\\",
                    \\"kind\\": \\"LinkedField\\",
                    \\"name\\": \\"node\\",
                    \\"plural\\": false,
                    \\"selections\\": [
                      (v3/*: any*/),
                      (v1/*: any*/)
                    ],
                    \\"storageKey\\": null
                  }
                ],
                \\"storageKey\\": null
              }
            ],
            \\"storageKey\\": \\"messages(first:10)\\"
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"5fe68f38752bb4f2db16c90657fa181e\\",
    \\"metadata\\": {},
    \\"name\\": \\"SomeQuery\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(SomeQueryDocument as any).__relay.hash = \\"5fe68f38752bb4f2db16c90657fa181e\\";"
`;

exports[`plugin generates a ReaderFragment for a fragment 1`] = `
"(ConversationFragmentFragmentDoc as any).__relay = {
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": null,
  \\"name\\": \\"ConversationFragment\\",
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"kind\\": \\"ScalarField\\",
      \\"name\\": \\"id\\",
      \\"storageKey\\": null
    },
    {
      \\"alias\\": null,
      \\"args\\": [
        {
          \\"kind\\": \\"Literal\\",
          \\"name\\": \\"first\\",
          \\"value\\": 10
        }
      ],
      \\"concreteType\\": \\"MessagesConnection\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"messages\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"MessagesConnectionEdge\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"edges\\",
          \\"plural\\": true,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"concreteType\\": \\"Message\\",
              \\"kind\\": \\"LinkedField\\",
              \\"name\\": \\"node\\",
              \\"plural\\": false,
              \\"selections\\": [
                {
                  \\"args\\": null,
                  \\"kind\\": \\"FragmentSpread\\",
                  \\"name\\": \\"MessageFragment\\"
                }
              ],
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": \\"messages(first:10)\\"
    }
  ],
  \\"type\\": \\"Conversation\\",
  \\"abstractKey\\": null
};
(ConversationFragmentFragmentDoc as any).__relay.hash = \\"3070480a90158780c7529708ea80c630\\";"
`;

exports[`plugin handles multiple operations in a single document 1`] = `
"(QueryOneDocument as any).__relay = (function(){
var v0 = [
  {
    \\"kind\\": \\"Literal\\",
    \\"name\\": \\"id\\",
    \\"value\\": \\"42\\"
  }
],
v1 = {
  \\"alias\\": null,
  \\"args\\": null,
  \\"kind\\": \\"ScalarField\\",
  \\"name\\": \\"__typename\\",
  \\"storageKey\\": null
};
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"QueryOne\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/)
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ],
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"QueryOne\\",
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": (v0/*: any*/),
        \\"concreteType\\": \\"Conversation\\",
        \\"kind\\": \\"LinkedField\\",
        \\"name\\": \\"conversation\\",
        \\"plural\\": false,
        \\"selections\\": [
          (v1/*: any*/),
          {
            \\"alias\\": null,
            \\"args\\": null,
            \\"kind\\": \\"ScalarField\\",
            \\"name\\": \\"id\\",
            \\"storageKey\\": null
          }
        ],
        \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
      }
    ]
  },
  \\"params\\": {
    \\"cacheID\\": \\"e83bb39e3b4b4b59f07401d198e46753\\",
    \\"metadata\\": {},
    \\"name\\": \\"QueryOne\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(QueryOneDocument as any).__relay.hash = \\"e83bb39e3b4b4b59f07401d198e46753\\";
(QueryTwoDocument as any).__relay = (function(){
var v0 = [
  {
    \\"alias\\": null,
    \\"args\\": [
      {
        \\"kind\\": \\"Literal\\",
        \\"name\\": \\"id\\",
        \\"value\\": \\"42\\"
      }
    ],
    \\"concreteType\\": \\"Conversation\\",
    \\"kind\\": \\"LinkedField\\",
    \\"name\\": \\"conversation\\",
    \\"plural\\": false,
    \\"selections\\": [
      {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"id\\",
        \\"storageKey\\": null
      }
    ],
    \\"storageKey\\": \\"conversation(id:\\\\\\"42\\\\\\")\\"
  }
];
return {
  \\"fragment\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Fragment\\",
    \\"metadata\\": null,
    \\"name\\": \\"QueryTwo\\",
    \\"selections\\": (v0/*: any*/),
    \\"type\\": \\"Query\\",
    \\"abstractKey\\": null
  },
  \\"kind\\": \\"Request\\",
  \\"operation\\": {
    \\"argumentDefinitions\\": [],
    \\"kind\\": \\"Operation\\",
    \\"name\\": \\"QueryTwo\\",
    \\"selections\\": (v0/*: any*/)
  },
  \\"params\\": {
    \\"cacheID\\": \\"08e437d8016e71af0a72300bb3c6f1f2\\",
    \\"metadata\\": {},
    \\"name\\": \\"QueryTwo\\",
    \\"operationKind\\": \\"query\\",
    \\"text\\": null
  }
};
})();
(QueryTwoDocument as any).__relay.hash = \\"08e437d8016e71af0a72300bb3c6f1f2\\";"
`;
